2010-07-30  Mike Frysinger  <vapier@gentoo.org>

  * data/analog/bf592/STEPPINGS: Add support for bf592-0.1.

  * src/tap/cable/jim.c: Fix by Michael Walle for build failure due to older
    cable struct setup.

2010-07-30  Arnim Laeuger  <arniml>

  * src/flash/intel.c: issue CFI_INTEL_CMD_WRITE_TO_BUFFER when polling
    SR_READY in buffered write (Michael Walle)

2010-07-30  Mike Frysinger  <vapier@gentoo.org>

  * include/urjtag/cable.h (URJ_CABLE_PARAM_KEY): Add new cable params for tdi,
    tdo, tms, and tck for new GPIO cable driver.
  * src/tap/cable.c (cable_param): Likewise.
  * src/tap/cable_list.h: Add new GPIO cable driver entry.
  * configure.ac, src/tap/Makefile.am: Likewise.
  * src/tap/cable/gpio.c: New GPIO cable driver by Stefano Babic.

2010-07-18  Mike Frysinger  <vapier@gentoo.org>

  * src/apps/jtag/jtag.c (main): Do not abort running just because a user's
    rc file is unparseable (or inaccessible).

  * src/apps/jtag/jtag.c: Unify jtag home dir parsing and add support for
    the Windows home env var names.

  * src/apps/bsdl2jtag/bsdl2jtag.c, src/bsdl/bsdl.c, src/bsdl/vhdl_flex.l,
    src/cmd/cmd_readmem.c, src/cmd/cmd_svf.c, src/cmd/cmd_writemem.c,
    src/global/parse.c, src/tap/detect.c: Add "b" to the fopen() mode string
    for Windows and such [2874517] by Daryl Tester.

2010-06-29  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable/generic_usbconn_list.h: Macro away duplicate ftdi lists.

  * src/tap/cable/generic_usbconn.c: Extend help function to include some
    ideas used by the FTDI help (show default vid/pid/driver).  Also add an
    extended help function to show additional help strings so sub-drivers
    need not duplicate this function.
  * src/tap/cable/generic_usbconn.h: Add prototype for new helper function.
  * src/tap/cable/ft2232.c: Switch to new usbconn helper function and export
    the FTDI-specific helper function so external FTDI drivers can use it.